src/test/resources/errors/wrong-anon-function-call.intp
f  = func(a) {
  g = func(a, b) {
    return 1
  }
  return g
}
f(1)(2)